[project]
name = "server-backup-scripts"
description = "A set of tooling for backing up my server(s)"
dynamic = ["version"]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.12"
authors = [
  {name = "AJ Fite", email = "me@ajfite.com"},
]
dependencies = [
  "click~=8.3",
  "loguru",
  "zstd",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-bugbear",
  "flake8-black",
  "flake8-builtins",
  "flake8-comprehensions",
  "flake8-isort",
  "flake8-gl-codeclimate",
  "pep8-naming",
  "black~=26.1",
  "isort",
]
deploy = [
  "twine",
]

[project.scripts]
backup = "server_backup_scripts.backup_server:main"
update = "server_backup_scripts.update_server:main"

[project.urls]
Repository = "https://git.nclf.net/ajfite/server-backup-scripts.git"

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["server_backup_scripts"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
